<resources>
    <string name="app_name">WallPapersApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="desarrollador">Desarrollado Por: Enrique Ramos</string>

    <!--MENU ADMIN-->
    <string name="InicioAdmin">Inicio</string>
    <string name="PerfilAdmin">Perfil</string>
    <string name="RegistrarAdmin">Registrar</string>
    <string name="Listardmin">Listar</string>
    <string name="Salir">Cerrar Sesion</string>

    <!--MENU CLIENTE-->
    <string name="Opcionestxt">Opciones</string>
    <string name="InicioCliente">Inicio</string>

    <string name="MasOpcionestxt">Mas opciones</string>
    <string name="AcerdaDe">Acerca De</string>
    <string name="Compartir">Compartir</string>

    <string name="Acceder">Acceder</string>

    <!--REGISTRO DE ADMINISTRADORES-->
    <string name="Registrotxt">Registro de administradores</string>
    <string name="Correo">Correo electrónico</string>
    <string name="Password">Password</string>
    <string name="Nombres">Nombres completos</string>
    <string name="Apellidos">Apellidos completos</string>
    <string name="Edad">Edad</string>
    <string name="FechaRegistro">Fecha De Registro</string>
    <string name="Registrar">Registrar</string>

    <!--LOGIN DE ADMINISTRADORES-->
    <string name="LoginTXT">Login de administradores</string>
    <string name="Ingresar">Ingresar</string>

    <!--CATEGORIAS-->
    <string name="Eligeunacategoriatxt">Elige Categoria</string>

    <string name="Peliculas">PELICULAS</string>
    <string name="Series">SERIES</string>
    <string name="Musica">MUSICA</string>
    <string name="Videojuegos">VIDEOJUEGOS</string>

    <!--MENU PARTE SUPERIOR DERECHA-->
    <string name="Agregar">Agregar</string>
    <string name="Vista">Vista</string>

    <!--AGREGAR PELICULAS-->
    <string name="NombreTXTPeliculas">Nombre de imagen</string>
    <string name="NombrePelicula">Escriba nombre aqui</string>
    <string name="VistaPeliculas">0</string>
    <string name="PublicarPelicula">Publicar</string>

    <!--AGREGAR MUSICA-->
    <string name="NombreTXTMusica">Nombre de musica</string>
    <string name="NombreMusica">Escriba nombre aqui</string>
    <string name="VistaMusica">0</string>
    <string name="PublicarMusica">Publicar</string>

    <!--AGREGAR SERIE-->
    <string name="NombreTXTSerie">Nombre de serie</string>
    <string name="NombreSerie">Escriba nombre aqui</string>
    <string name="VistaSerie">0</string>
    <string name="PublicarSerie">Publicar</string>

    <!--AGREGAR VIDEOJUEGO-->
    <string name="NombreTXTVideojuego">Nombre de videojuego</string>
    <string name="NombreVideojuego">Escriba nombre aqui</string>
    <string name="VistaVideojuego">0</string>
    <string name="PublicarVideojuego">Publicar</string>

    <!--ITEM PELICULA-->
    <string name="NombreImagenPelicula"> -- </string>
    <string name="VistaPelicula"> -- </string>

    <!--ITEM MUSICA-->
    <string name="NombreImagen_Musica"> -- </string>
    <string name="Vista_Musica"> -- </string>

    <!--ITEM SERIE-->
    <string name="NombreImagen_Serie"> -- </string>
    <string name="Vista_Serie"> -- </string>

    <!--ITEM VIDEOJUEGO-->
    <string name="NombreImagen_Videojuego"> -- </string>
    <string name="Vista_Videojuego"> -- </string>

    <!--DIALOG ORDENAR-->
    <string name="OrdenarTXT">Ordenar en: </string>
    <string name="Dos_Columnas">2 Columnas</string>
    <string name="Tres_Columnas">3 Columnas</string>

    <!--PERFIL-->
    <string name="PERFILADMINISTRADORTXT">MI PERFIL</string>
    <string name="MIINFORMACIONTXT">MI INFORMACION</string>
    <string name="UIDPERFILTXT">Uid: </string>
    <string name="UIDPERFIL"> -- </string>
    <string name="NOMBREPERFILTXT">Nombres: </string>
    <string name="NOMBREPERFIL"> -- </string>
    <string name="APELLIDOPERFILTXT">Apellidos: </string>
    <string name="APELLIDOPERFIL"> -- </string>
    <string name="CORREOPERFILTXT">Correo: </string>
    <string name="CORREOPERFIL"> -- </string>
    <string name="PASSWORDPERFILTXT">Password: </string>
    <string name="PASSWORDPERFIL"> -- </string>
    <string name="EDADPERFILTXT">Edad: </string>
    <string name="EDADPERFIL"> -- </string>
    <string name="ACTUALIZARPASS">Actualizar Password</string>
    <string name="ACTUALIZARDATOS">Actualizar Datos</string>

    <!--CAMBIAR PASSWORD-->
    <string name="MisCredencialesTXT">Mis Credenciales</string>
    <string name="PassActualTXT">Password Actual: </string>
    <string name="PassActual"> -- </string>
    <string name="ActualPassET"> Password Actual </string>
    <string name="NuevaPassET"> Nueva Password </string>
    <string name="CAMBIARPASSBTN">CAMBIAR PASSWORD</string>
    <string name="IRINICIOBTN">IR INICIO</string>
    <string name="NOTATXT">Nota: Si cambia el password, se cerrará sesión automáticamente</string>

    <!--ADMINISTRADOR ITEM-->
    <string name="NombresADMIN"> Nombres </string>
    <string name="CorreoADMIN"> Correo Electronico </string>

    <string name="buscar_administrador">Buscar</string>

    <!--DETALLE ADMINISTRADOR-->
    <string name="DetalleTXT">Detalle del administrador</string>
    <string name="UidDetalleAdmin">UID</string>
    <string name="NombresDetalleAdmin">NOMBRES</string>
    <string name="ApellidosDetalleAdmin">APELLIDOS</string>
    <string name="CorreoDetalleAdmin">CORREO</string>
    <string name="EdadDetalleAdmin">EDAD</string>

    <!---->
    <string name="NombreCategoriaD"> -- </string>

    <!--DETALLE IMAGEN-->
    <string name="NombreImagenTXT">Nombre de imagen</string>
    <string name="NombreImgenDetalle"> -- </string>
    <string name="VisualizacionTXT">Visualizaciones</string>
    <string name="VistaDetalle"> -- </string>
</resources>