<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".FragmentosAdministrador.PerfilAdmin">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/PERFILADMINISTRADORTXT"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/FOTOPERFILIMG"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:src="@drawable/perfil"/>

        <TextView
            android:text="@string/MIINFORMACIONTXT"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--UID-->
        <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/UIDPERFILTXT"
            android:text="@string/UIDPERFILTXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/UIDPERFIL"
            android:text="@string/UIDPERFIL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="18sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

        <!--NOMBRES-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/NOMBREPERFILTXT"
                android:text="@string/NOMBREPERFILTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/NOMBREPERFIL"
                android:text="@string/NOMBREPERFIL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="18sp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--APELLIDOS-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/APELLIDOPERFILTXT"
                android:text="@string/APELLIDOPERFILTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/APELLIDOPERFIL"
                android:text="@string/APELLIDOPERFIL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="18sp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--CORREO-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/CORREOPERFILTXT"
                android:text="@string/CORREOPERFILTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/CORREOPERFIL"
                android:text="@string/CORREOPERFIL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="18sp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--PASSWORD-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/PASSWORDPERFILTXT"
                android:text="@string/PASSWORDPERFILTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/PASSWORDPERFIL"
                android:text="@string/PASSWORDPERFIL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="18sp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--EDAD-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/EDADPERFILTXT"
                android:text="@string/EDADPERFILTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/EDADPERFIL"
                android:text="@string/EDADPERFIL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="18sp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/ACTUALIZARPASS"
            android:text="@string/ACTUALIZARPASS"
            android:textColor="#fff"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/editar_ico"
            android:layout_gravity="center"
            android:padding="10dp"
            android:drawablePadding="15dp"
            android:background="@drawable/btn_personalizado_dos"
            android:layout_width="230dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/ACTUALIZARDATOS"
            android:text="@string/ACTUALIZARDATOS"
            android:textColor="#fff"
            android:layout_marginTop="5dp"
            android:drawableStart="@drawable/editar_ico"
            android:layout_gravity="center"
            android:padding="10dp"
            android:drawablePadding="15dp"
            android:background="@drawable/btn_personalizado_dos"
            android:layout_width="230dp"
            android:layout_height="wrap_content"/>



    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>