<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".CategoriasAdmin.VideojuegosA.AgregarVideojuegos">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--TXT-->
            <TextView
                android:text="@string/NombreTXTVideojuego"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!--NOMBRE DE LA IMAGEN-->
            <EditText
                android:id="@+id/NombreVideojuego"
                android:hint="@string/NombreVideojuego"
                android:inputType="textCapWords|textAutoCorrect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>

            <!--VISTA-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <!--ICONO-->
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="25dp"
                    android:layout_height="30dp"
                    android:src="@drawable/vista_ico"/>

                <!--NUMERO DE VISTAS SE INICIALIZA EN 0-->
                <TextView
                    android:id="@+id/VistaVideojuego"
                    android:text="@string/VistaVideojuego"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--ICONO PARA ABRIR LA GALAERIA-->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ImagenAgregarVideojuego"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/imagen_ico"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <!--BOTON PARA PUBLICAR IMAGEN VIDEOJUEGO-->
        <Button
            android:id="@+id/PublicarVideojuego"
            android:text="@string/PublicarVideojuego"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_personalizado"
            android:textColor="#fff"
            android:layout_marginTop="10dp"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>